--- a/package.json
+++ b/package.json
@@ -73,10 +73,12 @@
     "@umijs/fabric": "^2.11.1",
     "@umijs/max": "^4.0.0-rc.22",
     "@umijs/openapi": "^1.3.0",
+    "axios": "^0.27.2",
     "cross-env": "^7.0.0",
     "cross-port-killer": "^1.3.0",
     "detect-installer": "^1.0.0",
     "eslint": "^7.32.0",
+    "file-saver": "^2.0.5",
     "gh-pages": "^3.2.0",
     "husky": "^7.0.4",
     "jsdom-global": "^3.0.0",
