--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "analyze": "cross-env ANALYZE=1 max build",
     "build": "max build",
     "deploy": "npm run build && npm run gh-pages",
+    "release": "node script/release.js",
     "dev": "npm run start:dev",
     "gh-pages": "gh-pages -d dist",
     "i18n-remove": "pro i18n-remove --locale=zh-CN --write",
@@ -85,6 +86,7 @@
     "lint-staged": "^10.0.0",
     "mockjs": "^1.1.0",
     "prettier": "^2.5.0",
+    "prompt": "^1.3.0",
     "swagger-ui-dist": "^4.12.0",
     "typescript": "^4.5.0",
     "umi-presets-pro": "^1.0.1",
