--- a/nginx.conf
+++ b/nginx.conf
@@ -56,6 +56,13 @@ http {
         proxy_set_header   Host              $http_host;
         proxy_set_header   X-Real-IP         $remote_addr;
     }
+
+    location ^~ /test {
+            proxy_pass       http://127.0.0.1:7007;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   Host              $http_host;
+            proxy_set_header   X-Real-IP         $remote_addr;
+        }
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
