--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "@umijs/max": "^4.0.0-rc.22",
     "@umijs/openapi": "^1.3.0",
     "axios": "^0.27.2",
+    "browserslist": "^4.21.5",
+    "caniuse-lite": "^1.0.30001466",
     "cross-env": "^7.0.0",
     "cross-port-killer": "^1.3.0",
     "detect-installer": "^1.0.0",
